@@ -8,6 +8,8 @@
   size options/size;
   content_url options/content_url;
   last_modified options/last_modified;
+  content_url_nocache string:${content_url}?nocache=${last_modified};
+  last_modified options/last_modified;
   image_width options/width;
   image_height options/height;
   image_tag options/image_tag;
@@ -18,11 +20,6 @@
   <tal:block condition="python: mode == 'edit'">
 
     <metal:block use-macro="here/widget_file_render/macros/file_size_max_view" />
-
-    <metal:block define-macro="image_title_edit">
-      <metal:block use-macro="here/widget_file_render/macros/file_title_edit">
-      </metal:block>
-    </metal:block>
 
     <img tal:condition="python: not empty_file and not session_file"
       tal:replace="structure image_tag" />
