@@ -732,6 +732,7 @@ function getLayoutMode() {
             'empty_file': False,
             'session_file': False,
             'current_filename': 'thefilename.txt',
+            'title': 'thetitle',
             'size': len('thefilecontent'),
             'last_modified': '',
             'content_url': 'http://url for someproxy bar thefilename.txt',
@@ -748,6 +749,7 @@ function getLayoutMode() {
             'empty_file': False,
             'session_file': False,
             'current_filename': 'thefilename.txt',
+            'title': 'thetitle',
             'size': len('thefilecontent'),
             'last_modified': '',
             'content_url': 'http://url for someentry bar None',
