@@ -6,7 +6,9 @@ New features
 -
 Bug fixes
 ~~~~~~~~~
--
+- Fixed #1518 by adding a title field in the File Widget, Image Widget and Photo
+  Widget. This title field is used as the "title" and "alt" attributes on
+  HTML images declarations.
 New internal features
 ~~~~~~~~~~~~~~~~~~~~~
 - 
